tests/fixtures/type_errors/builtin_channel_close_type.airl
;; ERROR: type mismatch
;; channel-close expects Int handle, not String
(channel-close "not-a-handle")
